# rust-flat-error

./: .release-plz.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml
.github/: settings.yml
.github/workflows/: release-plz.yml  rust.yml  security-audit.yml  typos.yml
src/: lib.rs
tests/: test_lib.rs
